# ICS4UI-Chess-Engine

./: .clang-format  .gitignore  CMakeLists.txt  ai.cpp  aiVsPlayer.cpp  api.py  build.sh  design.cpp  engine.cpp  engine.py  fenlist.csv  geneticBotEvaluate.cpp  geneticBotMoveOrdering  geneticBotMoveOrdering.cpp  lichessEngine.cpp  perft.cpp  proposal.cpp  readme.md
include/: ai.h  ai.hpp  chess.h  chess.hpp  chess_constants.hpp  chess_types.hpp  chess_utils.hpp  geneticBot.h
src/: debugging&Util.cpp  moveGen.cpp  moveMaking.cpp  userInterface.cpp
